# logistic_appro

./: CMakeLists.txt  FenetreMain.h  README.md  TableauCredit.h  ressources.qrc  todo.txt
resources/: ressources.qrc
scripts/: structure.sql
src/: main.cpp
src/business/exceptions/: AppException.cpp  AppException.h  BusinessException.cpp  BusinessException.h  DatabaseException.cpp  DatabaseException.h  ValidationException.cpp  ValidationException.h
src/business/managers/: GestionnaireCaisse.cpp  GestionnaireCaisse.h  GestionnaireCatalogue.cpp  GestionnaireCatalogue.h  GestionnaireClient.cpp  GestionnaireClient.h  GestionnaireCredit.cpp  GestionnaireCredit.h  GestionnaireEquipe.cpp  GestionnaireEquipe.h  GestionnaireRaisonsRetour.cpp  GestionnaireRaisonsRetour.h  GestionnaireRapport.cpp  GestionnaireRapport.h  GestionnaireRepartition.cpp  GestionnaireRepartition.h  GestionnaireRoute.cpp  GestionnaireRoute.h  GestionnaireSales.cpp  GestionnaireSales.h  GestionnaireStock.cpp  GestionnaireStock.h
src/business/services/: 12:19:07: Running steps for project logistic_appro.txt  ServiceAuthentification.cpp  ServiceAuthentification.h  ServicePermissions.cpp  ServicePermissions.h  ServiceValidation.cpp  ServiceValidation.h
src/core/constants/: AppConstants.cpp  AppConstants.h
src/core/entities/: ArticleRepartition.cpp  ArticleRepartition.h  CategorieProduit.cpp  CategorieProduit.h  Client.cpp  Client.h  Credit.cpp  Credit.h  EntreeStock.cpp  EntreeStock.h  Equipe.cpp  Equipe.h  Produit.cpp  Produit.h  ReceptionCaisse.cpp  ReceptionCaisse.h  Repartition.cpp  Repartition.h  RetourStock.cpp  RetourStock.h  Route.cpp  Route.h  StockSolde.cpp  StockSolde.h  Utilisateur.cpp  Utilisateur.h  Vente.cpp  Vente.h
src/data/database/: ConnexionBaseDonnees.cpp  ConnexionBaseDonnees.h  MigrationBaseDonnees.cpp  MigrationBaseDonnees.h  PoolConnexions.cpp  PoolConnexions.h
src/data/repositories/: IRepository.h  RepositoryArticleRepartition.cpp  RepositoryArticleRepartition.h  RepositoryCategorieProduit.cpp  RepositoryCategorieProduit.h  RepositoryClient.cpp  RepositoryClient.h  RepositoryCredit.cpp  RepositoryCredit.h  RepositoryEntreeStock.cpp  RepositoryEntreeStock.h  RepositoryEquipe.cpp  RepositoryEquipe.h  RepositoryProduit.cpp  RepositoryProduit.h  RepositoryReceptionCaisse.cpp  RepositoryReceptionCaisse.h  RepositoryRepartition.cpp  RepositoryRepartition.h  RepositoryRetourStock.cpp  RepositoryRetourStock.h  RepositoryRoute.cpp  RepositoryRoute.h  RepositorySales.cpp  RepositorySales.h  RepositoryStock.cpp  RepositoryStock.h  RepositoryStockMouvements.cpp  RepositoryStockMouvements.h  RepositoryStockSoldes.cpp  RepositoryStockSoldes.h  RepositoryTypeProduit.cpp  RepositoryTypeProduit.h  RepositoryUtilisateur.cpp  RepositoryUtilisateur.h
src/ui/dialogs/: BoiteDialogAlerte.cpp  BoiteDialogAlerte.h  BoiteDialogCategorie.cpp  BoiteDialogCategorie.h  BoiteDialogConnexion.cpp  BoiteDialogConnexion.h  BoiteDialogEntreeStock.cpp  BoiteDialogEntreeStock.h  BoiteDialogNouvelleEquipe.cpp  BoiteDialogNouvelleEquipe.h  BoiteDialogNouvelleRoute.cpp  BoiteDialogNouvelleRoute.h  BoiteDialogProduit.cpp  BoiteDialogProduit.h  BoiteDialogReceptionCaisse.cpp  BoiteDialogReceptionCaisse.h  BoiteDialogRepartition.cpp  BoiteDialogRepartition.h  BoiteDialogRetourRepartition.cpp  BoiteDialogRetourRepartition.h  BoiteDialogRetourStock.cpp  BoiteDialogRetourStock.h  BoiteDialogVente.cpp  BoiteDialogVente.h
src/ui/main_window/: FenetreMain.cpp  FenetreMain.h
src/ui/views/: VueCaisse.cpp  VueCaisse.h  VueClient.cpp  VueClient.h  VueCredit.cpp  VueCredit.h  VueRapport.cpp  VueRapport.h  VueRepartition.cpp  VueRepartition.h  VueStock.cpp  VueStock.h  VueTableau.cpp  VueTableau.h  VueVentes.cpp  VueVentes.h
src/ui/widgets/: PanelAlertes.cpp  PanelAlertes.h  TableauCatalogue.cpp  TableauCatalogue.h  TableauClient.cpp  TableauClient.h  TableauCredit.cpp  TableauCredit.h  TableauHistoriqueStock.cpp  TableauHistoriqueStock.h  TableauReconciliation.cpp  TableauReconciliation.h  TableauRepartition.cpp  TableauRepartition.h  TableauStock.cpp  TableauStock.h  TableauStockLocation.cpp  TableauStockLocation.h  TableauVentes.cpp  TableauVentes.h
src/utils/helpers/: AideDateTime.cpp  AideDateTime.h  GenerateurPDF.cpp  GenerateurPDF.h  GenerateurRapport.cpp  GenerateurRapport.h
src/utils/logger/: Enregistreur.cpp  Enregistreur.h
src/utils/validators/: ValidateurEntrees.cpp  ValidateurEntrees.h
tests/: CMakeLists.txt  test_database.cpp  test_repositories.cpp  test_validators.cpp
